Java 15, Text blocks, Sealed classes